--- a/infoMinisterios/infoMinisterios.csproj
+++ b/infoMinisterios/infoMinisterios.csproj
@@ -71,8 +71,7 @@
     <Content Include="images\icons-18-white.png" />
     <Content Include="images\icons-36-black.png" />
     <Content Include="images\icons-36-white.png" />
-    <None Include="index.bk" />
-    <Content Include="index.aspx" />
+    <Content Include="index.html" />
     <Content Include="jquery-1.5.min.js" />
     <Content Include="jquery.mobile-1.0a3.min.css" />
     <Content Include="jquery.mobile-1.0a3.min.js" />
@@ -80,13 +79,6 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="index.aspx.cs">
-      <DependentUpon>index.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="index.aspx.designer.cs">
-      <DependentUpon>index.aspx</DependentUpon>
-    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
